@@ -5,7 +5,9 @@
 # Option "-f" means forcefully create symlinks for missing files
 # (by default: copies are made only if necessary).
 #
-# NB: You must have gnulib-tool on the PATH.
+# NB: You must have gnulib-tool on the PATH.  If you want to
+# force gnulib-tool to "--import" (rather than "--update"),
+# remove either lib/ or m4/ before invocation.
 #
 # Tested with:
 # - gnulib-tool (GNU gnulib 2010-03-28 11:28:34)
@@ -14,9 +16,11 @@
 # - ltmain.sh (GNU libtool) 2.2.6b
 
 set -ex
-gnulib-tool --no-vc-files \
-  --avoid wchar \
-  --import
+if [ -d lib ] && [ -d m4 ]
+then act=update
+else act=import
+fi
+gnulib-tool --${act}
 autoreconf --install --symlink "$@"
 
 # autogen.sh ends here
