@@ -15,13 +15,14 @@
 
 
 # Specification in the form of a command-line invocation:
-#   gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --avoid=wchar --no-libtool --macro-prefix=gl --no-vc-files errno inline stdbool stdint unused-parameter
+#   gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --avoid=wchar --no-libtool --macro-prefix=gl --no-vc-files errno inline stdarg stdbool stdint unused-parameter
 
 # Specification in the form of a few gnulib-tool.m4 macro invocations:
 gl_LOCAL_DIR([])
 gl_MODULES([
   errno
   inline
+  stdarg
   stdbool
   stdint
   unused-parameter
