@@ -1,5 +1,13 @@
 2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Use gnulib module `stdarg'.
+
+	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdarg'.
+	* autogen.sh: Make gnulib-tool invocation select between
+	--update and --import based solely on presence of lib/ and m4/.
+
+2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Use gnulib module `errno'.
 
 	* m4/gnulib-cache.m4 (gl_MODULES): Add `errno'.
